# nexvirome

./: .gitignore  .nf-core.yml  .pre-commit-config.yaml  CHANGELOG.md  CITATIONS.md  LICENSE  README.md  main.nf  modules.json  nextflow.config  nextflow_schema.json  ro-crate-metadata.json
.githooks/: pre-commit
.github/: CONTRIBUTING.md  (+1 more)
scripts/: pyproject.toml
scripts/postprocessing/: data_loader.py  taxonomy.py
scripts/virome_classifier/: BUILD_TAXONOMY_DB.md  CLI_USAGE.md  README.md  __init__.py  __main__.py  __version__.py  coverage_based_classifier3.py  coverage_models.py  default_blacklist.txt  masking_genome.py
scripts/virome_classifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/virome_classifier/alignment/: __init__.py  header.py  pairing.py  parser.py
scripts/virome_classifier/classification/: __init__.py  besthit_classifier.py  em_classifier.py  fp_postfilter.py  lca_classifier.py  ml_filter.py  paired_concordance.py  phage_host_rollup.py
scripts/virome_classifier/cli/: QUICK_START_TAXONOMY_DB.md  README.md  TAXONOMY_DB_SETUP.md  __init__.py  build_taxonomy_db.py  classify.py  classify_coverage.py  encrypt_mask.py  extract_segment_info.py  merge_otu.py  profile_pipeline.py  setup_taxonomy_db.py  virome-classify
scripts/virome_classifier/core/: __init__.py  exceptions.py  logger.py  types.py
scripts/virome_classifier/reporting/: __init__.py  kraken_writer.py  otu_table.py  rank_utils.py  taxon_rollup_writer.py
scripts/virome_classifier/taxonomy/: __init__.py  ranks.py  taxonomy.py  taxonomy_db.py
(+102 files in other folders)
